# agent-pilot-autobench

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIRST_RUN.bat  INSTALL-COMMAND.bat  INSTALL.bat  LICENSE  README.md  SECURITY.md  START-HERE.bat  START.bat  SUPPORT.md  _CONFIG.toml  benchmark-suite-200000.plan.json  install.ps1  pilotBENCHY_toDO.md  pilotbench.toml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/inspect_tasks/: json_repair.py
benchmarks/plans/: external-agentic-heavy.plan.json  local-bfcl-smoke.plan.json  local-openai-smoke.plan.json  wiki-librarian-gemma3-27b-direct.plan.json  wiki-librarian-gemma4-26b-a4b-thinking.plan.json  wiki-librarian-qwen3-moe-thinking.plan.json
docs/: ARCHITECTURE.md  AUTORESEARCH-PROGRAM.md  BENCHMARK-SUITE-PHASE.md  COMMAND-BOARD.md  IMPLEMENTATION-PLAN.md  PRODUCT-DESIGN.md  QUESTION-SETS.md  START-FOR-NORMAL-PEOPLE.md
docs/adr/: 0001-detached-engine-thin-web-client.md
docs/examples/: flag-ladder-dry-run.md
docs/feature-requests/wiki-librarian-bench/: 00-vision-ssot.md  01-architecture.md  02-measurement-cube.md  03-jobs.md  04-knobs.md  05-meters.md  06-open-questions.md  07-model-plan-gemma3-27b.md  08-model-plan-qwen3-moe.md  09-hardening-spec.md  10-runnable-presets.md  11-flag-doctor-doctrine.md  12-model-plan-gemma4.md  IMPLEMENTATION-STATUS.md  README.md
docs/research/: 2026-07-01-question-set-validation.md  2026-07-01-self-upgrade-cycle.md
docs/superpowers/: SESSION-2026-06-23-handoff-2-onboarding-phaseB.md  SESSION-2026-06-23-handoff.md  SESSION-2026-06-28-handoff.md
docs/superpowers/plans/: 2026-05-25-public-autoresearch-foundation.md  2026-06-23-pilotbenchy-phaseA.md  (+10 more)
scripts/: llama_stability_probe.py
src/gguf_limit_bench/: __init__.py  __main__.py  agent_quality.py  answer_scoring.py  autodetect.py  autoresearch.py  bench_plan.py  benchmark_suite.py  champion_eval.py  charts.py  cli.py  config.py  context_limit.py  context_search.py  deployment.py  deployment_proof.py  deployment_readiness.py  discovery.py  doctor.py  engine.py  engine_replay.py  evaluation_mode.py  events.py  evidence.py  executive_planner.py  flag_ladder.py  flag_recommendations.py  flight_plans.py  gguf_metadata.py  gpu_profiles.py  hard_recommendations.py  hf_catalog.py  hf_model_match.py  hf_recommended_settings.py  inspect_score.py  installer.py  learning.py  librarian_suite.py  metrics.py  model_catalog.py  (+39 more)
tests/: conftest.py  test_agent_workflows.py  test_answer_scoring.py  test_autodetect.py  test_autoresearch.py  test_bench_plan.py  test_benchmark_plans.py  test_benchmark_suite.py  test_benchmark_suite_phase_docs.py  test_champion_eval.py  test_charts.py  test_cli.py  test_cli_engine.py  test_config.py  test_context_limit.py  test_context_search.py  test_deployment.py  test_deployment_proof.py  test_deployment_readiness.py  test_discovery.py  test_doctor.py  test_engine.py  test_engine_replay.py  test_evaluation_mode.py  test_events.py  test_evidence.py  test_flag_recommendations.py  test_flight_plans.py  test_gguf_metadata.py  test_gpu_profiles.py  test_hard_recommendations.py  test_hf_catalog.py  test_hf_model_match.py  test_hf_recommended_settings.py  test_inspect_score.py  test_installer.py  test_learning.py  test_librarian_compress.py  test_librarian_contradiction.py  test_librarian_dedupe.py  (+55 more)
tests/fixtures/: lms-models.json
(+46 files in other folders)
