[project]
name = "agent-pilot-autobench"
version = "0.1.0"
description = "Local-first autobenchmarking for choosing the best LLLM agent pilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "optuna>=4.8.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "types-psutil>=7.0.0.20250601",
]
bench = [
    "inspect-ai>=0.3.226",
    "openai>=1.0.0",
]

[project.scripts]
agent-autobench = "gguf_limit_bench.cli:app"
apb = "gguf_limit_bench.cli:app"
pilotbench = "gguf_limit_bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/gguf_limit_bench"]

[tool.ruff]
line-length = 100
