[project]
name = "agent-pilot-autobench"
version = "0.1.0"
description = "Local-first GGUF and llama.cpp benchmarking for agent workloads."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["gguf", "llama.cpp", "benchmarking", "local-ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "fastapi>=0.115.0",
    "huggingface_hub>=0.34",
    "nvidia-ml-py>=13.610.43",
    "optuna>=4.8.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "typer>=0.26.8",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "ruff>=0.15.19",
    "types-psutil>=7.0.0.20250601",
]
bench = [
    "inspect-ai>=0.3.241",
    "openai>=1.0.0",
]

[project.scripts]
agent-autobench = "gguf_limit_bench.cli:app"
apb = "gguf_limit_bench.cli:app"
pilotbench = "gguf_limit_bench.cli:app"

[project.urls]
Repository = "https://github.com/psychofanPLAYS/agent-pilot-autobench"
Issues = "https://github.com/psychofanPLAYS/agent-pilot-autobench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/gguf_limit_bench"]

[tool.ruff]
line-length = 100
